# Cryptocurrency

./: .pre-commit-config.yaml  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
fastapi-aplication/: alembic.ini  main.py
fastapi-aplication/alembic/versions/: 2024_10_27_1134-7e486c07628b_create_prices_table.py  2024_10_27_1620-d90b06208814_change_timestamp_column_to_with_time_.py
fastapi-aplication/api/api_v1/: __init__.py  prices.py
fastapi-aplication/core/: config.py
fastapi-aplication/core/models/: __init__.py  db_helper.py  models.py
fastapi-aplication/core/schemas/: prices.py
fastapi-aplication/crud/: prices.py
fastapi-application/: .env.example  index_price.py
fastapi-application/api/: routers.py
fastapi-application/core/models/: models.py
fastapi-application/crud/: prices.py
fastapi-application/tests/: conftest.py  test_add_to_db.py  test_prices.py
